src/test/derive_enum.rs
use strawberry_fields::StrawberryFields;

#[derive(StrawberryFields)]
enum Dummy {
    First,
    Second,
}
fn main() {}
